@@ -40,3 +40,8 @@ exports.MessageCoder = require( '../MessageCoder' );
 exports.CacheFace = require( '../CacheFace' );
 exports.LogFace = require( '../LogFace' );
 exports.PingFace = require( '../PingFace' );
+
+if ( typeof window === 'undefined' ) {
+    const path = module.require( 'path' );
+    exports.specDirs = path.resolve( __dirname, '..', 'specs' );
+}
